syntax = "proto3";

package common;

option go_package = "github.com/SnakeHacker/tweb/server/proto";

enum Error {
    NO_ERROR = 0;
    UNKNOWN_ERROR = 1;
    INTERNAL_ERROR = 2;
    INVALID_USERNAME_OR_PASSWORD = 3;
}

enum UserRole {
    UNKNOWN_USER_ROLE = 0;
    ROLE_ADMIN = 1;
    ROLE_USER = 2;
}

message User {
    int64 id = 1;
    UserRole role = 2;
    string nickname = 3;
}

message StockDaily {
    string ts_code = 1;
    string trade_date = 2;
    double open = 3;
    double high = 4;
    double low = 5;
    double close = 6;
    double pre_close = 7;
    double change = 8;
    double pct_chg = 9;
    double vol = 10;
    double amount = 11;
}