syntax = "proto3";

import "common.proto";

package session;

option go_package = "github.com/SnakeHacker/tweb/server/proto";

// Session

message Session {
    string token = 1;
    common.User user = 2;
}

// Login

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    common.Error error = 1;
    Session session = 2;
}

// Logout

message LogoutRequest {
}

message LogoutResponse {
    common.Error error = 1;
}
